--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@asymmetrik/ngx-leaflet": "^6.0.1",
+    "@types/leaflet": "^1.5.4",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.5.1",
     "rxjs": "~6.4.0",
